--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         </title>
     </head>
     <body>
+        <ul>
+            <li><a href="default.asp">Home</a></li>
+              <li><a href="news.asp">News</a></li>
+              <li><a href="contact.asp">Contact</a></li>
+              <li><a href="about.asp">About</a></li>
+        </ul>
         <h2> 1st Edition </h2>
         <p>
             This is the glorious webpage that Darren Li created on November 20th 2024
