--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         <h2> 3rd Edition</h2>
         <p>This is my beautiful cat in the future
         </p>
-        <img src="Cat.png" width="500px">
+        <img src=Website/Cat.png width="500px">
     </body>
 </html>
