--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <ul>
-            <li><a href="default.asp">Home</a></li>
-              <li><a href="news.asp">News</a></li>
-              <li><a href="contact.asp">Contact</a></li>
-              <li><a href="about.asp">About</a></li>
+            <li><a href="index.html">Home</a></li>
+              <li><a href="index.html">News</a></li>
+              <li><a href="index.html">Contact</a></li>
+              <li><a href="index.html">About</a></li>
         </ul>
         <h2> 1st Edition </h2>
         <p>
