--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
               <li><a href="index.html">News</a></li>
-              <li><a href="index.html">Contact</a></li>
+              <li><a href="index.html">Cats</a></li>
               <li><a href="index.html">About</a></li>
         </ul>
         <h2> 1st Edition </h2>
