--- a/cats.html
+++ b/cats.html
@@ -3,6 +3,6 @@
         I want a siamese cat <br>
         This is my beautiful cat in the future
         </p>
-        <img src="Cat.png" width="500px">
+        <img src="cat.png" width="500px">
     </body>
     </html>
