--- a/news.html
+++ b/news.html
@@ -1,6 +1,6 @@
 <html>
     <body>
         MARKET WATCH <br>
-        <img src="Nvidia.png" width="1000px">
+        <img src="nvidia.png" width="1000px">
     </body>
     </html>
