--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     
         <h2> 1st Edition </h2>
         <p>
-            This is the glorious webpage that Darren Li created on November 20th 2024
+            This is the glorious webpage that Darren Li created with a functional dropdown menu on November 20th 2024
         </p>
         <h2> 2nd Edition</h2>
         <p>
-            This is the majestic webpage that Darren Li created on November 20th 2024 <br>
+            This is the majestic webpage that Darren Li created with an operational dropdown menu on November 20th 2024 <br>
         
     </body>
 </html>
